
[float]
===== Features
- Cool new feature: {lambda-pull}2526[#2526]

[float]
===== Bug fixes
////

[float]
[[lambda-unreleased]]
=== Unreleased

https://github.com/elastic/apm-aws-lambda/compare/v1.1.0...main[View commits]


[float]
===== Breaking changes

[float]
===== Features
- Disable CGO to prevent libc/ABI compatibility issues {lambda-pull}292[292]

[float]
===== Bug fixes

[float]
[[lambda-1.1.0]]
=== 1.1.0 - 2022/08/24

https://github.com/elastic/apm-aws-lambda/compare/v1.0.2...v1.1.0[View commits]


[float]
==== Features
- Added support for Secret Manager {lambda-pull}208[208]
- Added support for Lambda platform metrics {lambda-pull}202[202]
- Migrated to AWS SDK for Go v2 {lambda-pull}232[232]
- Make buffer size for agent data configurable {lambda-pull}262[262]
- Add support for reproducible builds {lambda-pull}237[237]
- Improve extension client error messages {lambda-pull}259[259]

[float]
==== Bug fixes
- Log a warning when authentication with APM Server fails {lambda-pull}228[228]
- Handle http.ErrServerClosed correctly {lambda-pull}234[234]
- Handle main loop errors correctly {lambda-pull}252[252]
- Avoid sending corrupted compressed data to APM Server {lambda-pull}257[257]
- Avoid creating http transports on each info request {lambda-pull}260[260]
- Randomise the initial grace period to avoid collisions {lambda-pull}240[240]
- Handle metadata errors correctly {lambda-pull}254[254]
- Always flush data to APM server before shutting down and avoid concurrent access to data channel {lambda-pull}258[258]

[float]
[[lambda-1.0.2]]
=== 1.0.2 - 2022/06/09

https://github.com/elastic/apm-aws-lambda/compare/v1.0.1...v1.0.2[View commits]

[float]
==== Bug fixes
- Only add executables to extension {lambda-pull}216[216]

[float]
[[lambda-1.0.1]]
=== 1.0.1 - 2022/06/03

https://github.com/elastic/apm-aws-lambda/compare/v1.0.0...v1.0.1[View commits]

[float]
==== Features
- Add support for building and pushing docker images {lambda-pull}199[199]

[float]