@@ -31,7 +31,7 @@ import (
 	"github.com/stretchr/testify/require"
 )
 
-func Test_processPlatformReportColdstart(t *testing.T) {
+func TestProcessPlatformReport_Coldstart(t *testing.T) {
 	mc := apmproxy.MetadataContainer{
 		Metadata: []byte(fmt.Sprintf(`{"metadata":{"service":{"agent":{"name":"apm-lambda-extension","version":"%s"},"framework":{"name":"AWS Lambda","version":""},"language":{"name":"python","version":"3.9.8"},"runtime":{"name":"","version":""},"node":{}},"user":{},"process":{"pid":0},"system":{"container":{"id":""},"kubernetes":{"node":{},"pod":{}}},"cloud":{"provider":"","instance":{},"machine":{},"account":{},"project":{},"service":{}}}}`, extension.Version)),
 	}
@@ -90,7 +90,7 @@ func Test_processPlatformReportColdstart(t *testing.T) {
 	assert.JSONEq(t, desiredOutputMetrics, processingResult[1])
 }
 
-func Test_processPlatformReportNoColdstart(t *testing.T) {
+func TestProcessPlatformReport_NoColdstart(t *testing.T) {
 
 	mc := apmproxy.MetadataContainer{
 		Metadata: []byte(fmt.Sprintf(`{"metadata":{"service":{"agent":{"name":"apm-lambda-extension","version":"%s"},"framework":{"name":"AWS Lambda","version":""},"language":{"name":"python","version":"3.9.8"},"runtime":{"name":"","version":""},"node":{}},"user":{},"process":{"pid":0},"system":{"container":{"id":""},"kubernetes":{"node":{},"pod":{}}},"cloud":{"provider":"","instance":{},"machine":{},"account":{},"project":{},"service":{}}}}`, extension.Version)),
@@ -148,4 +148,82 @@ func Test_processPlatformReportNoColdstart(t *testing.T) {
 
 	assert.JSONEq(t, desiredOutputMetadata, processingResult[0])
 	assert.JSONEq(t, desiredOutputMetrics, processingResult[1])
+}
+
+func TestProcessPlatformReport_DataCorruption(t *testing.T) {
+	// Allocate big capacity metadata array to prevent reallocation
+	raw := make([]byte, 0, 7000)
+	mc := &apmproxy.MetadataContainer{
+		Metadata: append(raw, []byte(fmt.Sprintf(`{"metadata":{"service":{"agent":{"name":"apm-lambda-extension","version":"%s"},"framework":{"name":"AWS Lambda","version":""},"language":{"name":"python","version":"3.9.8"},"runtime":{"name":"","version":""},"node":{}},"user":{},"process":{"pid":0},"system":{"container":{"id":""},"kubernetes":{"node":{},"pod":{}}},"cloud":{"provider":"","instance":{},"machine":{},"account":{},"project":{},"service":{}}}}`, extension.Version))...),
+	}
+	reqID := "8476a536-e9f4-11e8-9739-2dfe598c3fcd"
+	invokedFnArn := "arn:aws:lambda:us-east-2:123456789012:function:custom-runtime"
+	timestamp := time.Date(2022, 11, 12, 0, 0, 0, 0, time.UTC)
+	logEvent := LogEvent{
+		Time: timestamp,
+		Type: Report,
+		Record: LogEventRecord{
+			RequestID: reqID,
+			Metrics: PlatformMetrics{
+				DurationMs:       1.0,
+				BilledDurationMs: 1,
+				MemorySizeMB:     1,
+				MaxMemoryUsedMB:  1,
+				InitDurationMs:   1.0,
+			},
+		},
+	}
+	nextEventResp := &extension.NextEventResponse{
+		Timestamp:          timestamp,
+		EventType:          extension.Invoke,
+		RequestID:          reqID,
+		InvokedFunctionArn: invokedFnArn,
+	}
+	expected := "{\"metricset\":{\"samples\":{\"system.memory.total\":{\"value\":1.048576e+06},\"system.memory.actual.free\":{\"value\":0},\"faas.duration\":{\"value\":1},\"faas.billed_duration\":{\"value\":1},\"faas.coldstart_duration\":{\"value\":1},\"faas.timeout\":{\"value\":-1.6682112e+12}},\"timestamp\":1668211200000000,\"faas\":{\"coldstart\":true,\"execution\":\"8476a536-e9f4-11e8-9739-2dfe598c3fcd\",\"id\":\"arn:aws:lambda:us-east-2:123456789012:function:custom-runtime\"}}}"
+
+	agentData, err := ProcessPlatformReport(mc, nextEventResp, logEvent)
+	require.NoError(t, err)
+
+	// process another platform report to ensure the previous payload is not corrupted
+	logEvent.Record.RequestID = "corrupt-req-id"
+	nextEventResp.RequestID = "corrupt-req-id"
+	_, err = ProcessPlatformReport(mc, nextEventResp, logEvent)
+	require.NoError(t, err)
+
+	data := strings.Split(string(agentData.Data), "\n")
+	assert.JSONEq(t, expected, data[1])
+}
+
+func BenchmarkPlatformReport(b *testing.B) {
+	mc := &apmproxy.MetadataContainer{
+		Metadata: []byte(`{"metadata":{"service":{"agent":{"name":"apm-lambda-extension","version":"1.1.0"},"framework":{"name":"AWS Lambda","version":""},"language":{"name":"python","version":"3.9.8"},"runtime":{"name":"","version":""},"node":{}},"user":{},"process":{"pid":0},"system":{"container":{"id":""},"kubernetes":{"node":{},"pod":{}}},"cloud":{"provider":"","instance":{},"machine":{},"account":{},"project":{},"service":{}}}}`),
+	}
+	reqID := "8476a536-e9f4-11e8-9739-2dfe598c3fcd"
+	invokedFnArn := "arn:aws:lambda:us-east-2:123456789012:function:custom-runtime"
+	timestamp := time.Date(2022, 11, 12, 0, 0, 0, 0, time.UTC)
+	logEvent := LogEvent{
+		Time: timestamp,
+		Type: Report,
+		Record: LogEventRecord{
+			RequestID: reqID,
+			Metrics: PlatformMetrics{
+				DurationMs:       1.0,
+				BilledDurationMs: 1,
+				MemorySizeMB:     1,
+				MaxMemoryUsedMB:  1,
+				InitDurationMs:   1.0,
+			},
+		},
+	}
+	nextEventResp := &extension.NextEventResponse{
+		Timestamp:          timestamp,
+		EventType:          extension.Invoke,
+		RequestID:          reqID,
+		InvokedFunctionArn: invokedFnArn,
+	}
+
+	for n := 0; n < b.N; n++ {
+		_, err := ProcessPlatformReport(mc, nextEventResp, logEvent)
+		require.NoError(b, err)
+	}
 }
