@@ -32,6 +32,7 @@ https://github.com/elastic/apm-aws-lambda/compare/v1.1.0...main[View commits]
 
 [float]
 ===== Bug fixes
+- Fix possible data corruption while processing multiple log events {lambda-pull}309[309]
 
 [float]
 [[lambda-1.1.0]]
